--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage"
+    "test": "node_modules/.bin/jest --coverage"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
