--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
+    "i18next": "^21.5.2",
     "primeicons": "^4.1.0",
     "primereact": "^7.0.0-rc.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.14.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "typescript": "^4.4.4",
